# voxpipe

./: .copier-answers.yml  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  duties.py  justfile  mkdocs.yml  output.json  pyproject.toml  zoom_audio_normal.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml
config/: coverage.ini  pytest.ini  ruff.toml
config/vscode/: launch.json
docs/.overrides/partials/: comments.html
docs/reference/: api.md
scripts/: gen_credits.py  make.py
src/voxpipe/: __init__.py  __main__.py  config.py
src/voxpipe/_internal/: cli.py  debug.py
src/voxpipe/core/: __init__.py  audio.py  diarization.py  llm.py  merger.py  subtitles.py  transcription.py
src/voxpipe/utils/: __init__.py  cleaning.py  device.py  io.py  progress.py  timestamps.py
tests/: __init__.py  test_api.py  test_cli.py
